fix post list on small screens

--- a/css/main.scss
+++ b/css/main.scss
@@ -135,3 +135,9 @@ p.appetizer, div.appetizer {
   justify-content: space-between;
   margin: 5px 0px;
 }
+
+.posts a {
+  text-align: left;
+  padding-right: 3rem;
+  max-width: 70%;
+}
